# Koden

./: .gitignore
backend/: .pdm-python  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: celery_app.py  main.py
backend/app/api/: auth.py  github.py  router.py  routes.py  tasks.py
backend/app/api/routes/analyse/: analyse.py
backend/app/api/routes/repos/: repos.py
backend/app/api/routes/users/: users.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  logging.py
backend/app/models/: analysis.py
backend/app/models/api/: analysis.py  github.py  repos.py  users.py
backend/app/models/domain/: analysis.py
backend/app/services/: analyzer.py  dependency_parser.py  github_service.py  task_service.py
backend/app/tasks/: github.py
backend/db/migrations/: env.py
backend/db/migrations/utils/inheritance/: v0_inheritance_utils.py
backend/db/migrations/versions/: 1aa8d852db01_create_user_table.py  29046abc1ea8_add_tasks_to_db.py  9a2026e724bc_update_user_table_to_include_firebase_.py  e3efebf5495c_add_basic_repo_page.py
backend/db/models/: __init__.py  base.py  repos.py  tasks.py  user.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/atoms/: calendar.tsx  command.tsx  sidebar.tsx
frontend/src/components/loading/: full-page-loading.tsx
frontend/src/components/modals/: ConnectRepoModal.tsx  profile-completion-modal.tsx
frontend/src/components/molecules/: footer.tsx  hero.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  navbar.tsx  repo-download-tasks.tsx  repo-list.tsx  sidebar.tsx  visual-preview-card.tsx
frontend/src/components/templates/: dashboard-layout.tsx
frontend/src/hooks/: useAPI.ts  useAuth.tsx
frontend/src/providers/: query-provider.tsx
frontend/src/services/: auth.ts  firebase.ts
frontend/src/stories/atoms/: Accordion.stories.tsx  Alert.stories.tsx  AspectRatio.stories.tsx  Avatar.stories.tsx  Badge.stories.tsx  Breadcrumb.stories.tsx  Button.stories.tsx  Calendar.stories.tsx  Card.stories.tsx  Carousel.stories.tsx  Chart.stories.tsx  Checkbox.stories.tsx  Collapsible.stories.tsx  (+26 more)
frontend/src/styles/: theme.ts
frontend/src/types/: repo.ts
(+5 files in other folders)
